# template-python

./: .coveragerc  .pre-commit-config.yml  CHANGELOG.md  Dockerfile  LICENSE  README.md  justfile  pyproject.toml  pytest.ini
.github/: dependabot.yml
.github/workflows/: cd.yml  ci.yml  release.yml
src/example_package/test/: test_main.py
