[tool.poetry]
name = "your-package-name"
version = "0.1.0"
description = "A description of your package."
authors = ["Your Name <your.email@example.com>"]
license = "MIT"  # Replace with your license if different
readme = "README.md"
repository = "https://github.com/yourusername/your-package-repo"
keywords = ["your", "keywords", "here"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = ">=3.11"
requests = "^2.28"  # Remove or replace dependencies as needed
ruff = "^0.7.3"
coverage = "^7.6.4"
pytest = "^8.3.3"

[tool.poetry.scripts]
your-script-name = "your_module.your_main_function:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
